--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
+    "build": "electron-builder build -lmwS",
     "test": "echo \"No tests yet\""
   },
   "author": "Rillian Grant <rillian.grant@gmail.com>",
