--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint": "^6.6.0"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "electron-is-dev": "^1.1.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
   }
 }
